@@ -4750,10 +4750,17 @@ break|break;
 block|}
 catch|catch
 parameter_list|(
-name|IOException
-name|e
+name|Throwable
+name|t
 parameter_list|)
 block|{
+name|t
+operator|=
+name|translateException
+argument_list|(
+name|t
+argument_list|)
+expr_stmt|;
 if|if
 condition|(
 name|tries
@@ -4763,29 +4770,19 @@ operator|-
 literal|1
 condition|)
 block|{
-comment|// Don't bother sleeping. We've run out of retries.
-if|if
-condition|(
-name|e
-operator|instanceof
-name|RemoteException
-condition|)
-block|{
-name|e
-operator|=
-name|RemoteExceptionHandler
-operator|.
-name|decodeRemoteException
-argument_list|(
-operator|(
-name|RemoteException
-operator|)
-name|e
-argument_list|)
-expr_stmt|;
-block|}
 throw|throw
-name|e
+operator|new
+name|NoServerForRegionException
+argument_list|(
+literal|"Timed out trying to locate "
+operator|+
+literal|"root region because: "
+operator|+
+name|t
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
 throw|;
 block|}
 comment|// Sleep and retry finding root region.
@@ -4955,55 +4952,13 @@ name|Throwable
 name|t
 parameter_list|)
 block|{
-if|if
-condition|(
-name|t
-operator|instanceof
-name|UndeclaredThrowableException
-condition|)
-block|{
 name|t
 operator|=
-name|t
-operator|.
-name|getCause
-argument_list|()
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|t
-operator|instanceof
-name|RemoteException
-condition|)
-block|{
-name|t
-operator|=
-name|RemoteExceptionHandler
-operator|.
-name|decodeRemoteException
+name|translateException
 argument_list|(
-operator|(
-name|RemoteException
-operator|)
 name|t
 argument_list|)
 expr_stmt|;
-block|}
-if|if
-condition|(
-name|t
-operator|instanceof
-name|DoNotRetryIOException
-condition|)
-block|{
-throw|throw
-operator|(
-name|DoNotRetryIOException
-operator|)
-name|t
-throw|;
-block|}
 name|exceptions
 operator|.
 name|add
@@ -5112,55 +5067,13 @@ name|Throwable
 name|t
 parameter_list|)
 block|{
-if|if
-condition|(
-name|t
-operator|instanceof
-name|UndeclaredThrowableException
-condition|)
-block|{
 name|t
 operator|=
-name|t
-operator|.
-name|getCause
-argument_list|()
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|t
-operator|instanceof
-name|RemoteException
-condition|)
-block|{
-name|t
-operator|=
-name|RemoteExceptionHandler
-operator|.
-name|decodeRemoteException
+name|translateException
 argument_list|(
-operator|(
-name|RemoteException
-operator|)
 name|t
 argument_list|)
 expr_stmt|;
-block|}
-if|if
-condition|(
-name|t
-operator|instanceof
-name|DoNotRetryIOException
-condition|)
-block|{
-throw|throw
-operator|(
-name|DoNotRetryIOException
-operator|)
-name|t
-throw|;
-block|}
 block|}
 return|return
 literal|null
@@ -6985,6 +6898,69 @@ argument_list|)
 return|;
 block|}
 block|}
+return|;
+block|}
+specifier|private
+name|Throwable
+name|translateException
+parameter_list|(
+name|Throwable
+name|t
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|t
+operator|instanceof
+name|UndeclaredThrowableException
+condition|)
+block|{
+name|t
+operator|=
+name|t
+operator|.
+name|getCause
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|t
+operator|instanceof
+name|RemoteException
+condition|)
+block|{
+name|t
+operator|=
+name|RemoteExceptionHandler
+operator|.
+name|decodeRemoteException
+argument_list|(
+operator|(
+name|RemoteException
+operator|)
+name|t
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|t
+operator|instanceof
+name|DoNotRetryIOException
+condition|)
+block|{
+throw|throw
+operator|(
+name|DoNotRetryIOException
+operator|)
+name|t
+throw|;
+block|}
+return|return
+name|t
 return|;
 block|}
 block|}
